--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -11,74 +11,87 @@
 
  <br><br>
     <section class="calesita">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_735921-MLA27478460893_062018-O.webp"
-                        class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Arduino Nano Atmega328</h5>
-                        <p>Vista Hardware.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_839465-MLA27478499039_062018-O.webp"
-                        class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Arduino Nano Atmega328</h5>
-                        <p>Mapeado.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="https://http2.mlstatic.com/D_NQ_NP_901836-MLA27478447482_062018-O.webp"
-                        class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Arduino Nano Atmega328</h5>
-                        <p>Mapeado.</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Anterior</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Siguiente</span>
-            </a>
+        <div class="container carousel">
+            <div class="row">
+                <!-- COMIENZO DE CARROUSEL-->
+			<script>
+				$('.carousel').carousel({
+ 					 interval: 5000,
+  				pause: "false"
+						});
+			</script>
+			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+				  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+				</ol>
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+				  <div class="carousel-item active">
+					<img class="d-block w-100" src="/images/productos/ARDUINO PRO MINI 5V 16MHZ ROBOTICA ATMEL ATMEGA328.jpg" data-color="lightblue" alt="First Image">
+					<div class="carousel-caption d-md-block">
+					</div>
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-100" src="https://http2.mlstatic.com/D_NQ_NP_735755-MLA44650710008_012021-O.webp" data-color="firebrick" alt="Second Image">
+					<div class="carousel-caption d-md-block">
+						
+					</div>
+				  </div>
+				  <div class="carousel-item">
+					<img class="d-block w-100" src="https://http2.mlstatic.com/D_NQ_NP_692357-MLA44650696154_012021-O.webp" data-color="violet" alt="Third Image">
+					<div class="carousel-caption d-md-block">
+					</div>
+				  </div>
+				</div>
+				<!-- Controls -->
+				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+					</a>
+					  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+					</a>
+					</div>
+		
+
+			<!-- FIN CARROUSEL -->
+            </div>    
         </div>
     </section>
 
     <section class="detalle"> 
-        <div class="titulo col 12">
-        <h3>Descripcion</h3>
-        </div>
-        <div class="informacion">
-        <p>El Arduino Nano es una pequeña y completa placa basada en el  ATmega328. Es muy compacto y puedes ser utilizado fácilmente en un  protoboard. Tiene más o menos la misma funcionalidad que el Arduino Uno, pero con una presentación diferente. La placa es compatible 100%. No posee conector para alimentación externa, y funciona con un cable USB Mini-B (incluido) en vez del cable estándar.</p>
-        </div>
-       <div class="precios">
-        <h2>$320.00</h2>
-        </div>
-        <div class="center">
-            <div class="stars">
-              <input type="radio" id="five" name="rate" value="5">
-              <label for="five"></label>
-              <input type="radio" id="four" name="rate" value="4">
-              <label for="four"></label>
-              <input type="radio" id="three" name="rate" value="3">
-              <label for="three"></label>
-              <input type="radio" id="two" name="rate" value="2">
-              <label for="two"></label>
-              <input type="radio" id="one" name="rate" value="1">
-              <label for="one"></label>
-              <span class="result"></span>
+        <div class="container">
+            <div class="row">
+                <div class="titulo col-12">
+                <h3>Descripcion</h3>
+                </div>
+                <div class="informacion col-12">
+                <p>El Arduino Nano es una pequeña y completa placa basada en el  ATmega328. Es muy compacto y puedes ser utilizado fácilmente en un  protoboard. Tiene más o menos la misma funcionalidad que el Arduino Uno, pero con una presentación diferente. La placa es compatible 100%. No posee conector para alimentación externa, y funciona con un cable USB Mini-B (incluido) en vez del cable estándar.</p>
+                </div>
+            <div class="precios col-6">
+                <h2>$320.00</h2>
             </div>
-        </div>     
+            <div class="centro col-6">
+                    <div class="stars">
+                    <input type="radio" id="five" name="rate" value="5">
+                    <label for="five"></label>
+                    <input type="radio" id="four" name="rate" value="4">
+                    <label for="four"></label>
+                    <input type="radio" id="three" name="rate" value="3">
+                    <label for="three"></label>
+                    <input type="radio" id="two" name="rate" value="2">
+                    <label for="two"></label>
+                    <input type="radio" id="one" name="rate" value="1">
+                    <label for="one"></label>
+                    <span class="result"></span>
+                    </div>
+            </div> 
+            </div>    
+        </div>        
     </section>
         <div class="d-grid gap-2">
             <button class="btn btn-primary" type="button"><i class="fas fa-shopping-bag"></i>COMPRAR AHORA</button>
