--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -21,21 +21,32 @@
             <div class="col-md-12">
               <div class="login-container">
                 <div class="register">
-                  <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
+                  <h2 class="text1">¡Hola! Completá tus datos </h2>
                   <form action="">
-                    <!--<input type="text" placeholder="Nombre" class="nombre"> -->
-                    <input type="text" placeholder="Correo" class="correo">
+                      <div>
+                    <input type="text" placeholder="Nombre" class="nombre"  name="nombre">
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                  </div>
+
+                  <div>
+                    <input type="text" placeholder="Apellido" class="apellido"> 
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                </div>
+
+                <div>
+                    <input type="text" placeholder="Email" class="email">
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
+                </div>
+
+                <div>
                     <input type="password" placeholder="Contraseña" class="pass">
+                    <span class="text-danger"><%= (typeof errores != 'undefined' && errores.pass)?errores.pass.msg : "" %> </span>
+                </div>
+                    
                     <input type="submit" class="submit" value="INICIAR">
-                    <div class="form-check d-flex justify-content-center mt-4">
-                      <input class="form-check-input" type="checkbox" id="flexCheckDefault" name="recordar">
-                      <label class="form-check-label mr-2" for="flexCheckDefault">
-                        Recordarme
-                      </label>
-                    </div>
                   </form>
                   <a href="#" style="color: #30475e;">
-                      <h1 class="noLogin">¿Aún no estás registrado?</h1>
+                      <h1 class="noLogin">¿Estás registrado? <a href="users/iniciar"></a>Inicia sesión</h1>
                   
                 </div>
                <!-- <div class="login">
