--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -22,7 +22,7 @@
               <div class="login-container">
                 <div class="register">
                   <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
-                  <form action="">
+                  <form action="" method="POST">
                     <!--<input type="text" placeholder="Nombre" class="nombre"> -->
                     <input type="text" placeholder="Correo" class="correo">
                     <input type="password" placeholder="Contraseña" class="pass">
@@ -34,7 +34,7 @@
                       </label>
                     </div>
                   </form>
-                  <a href="#" style="color: #30475e;">
+                  <a href="/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
                   
                 </div>
