--- a/Site/views/productAdd.ejs
+++ b/Site/views/productAdd.ejs
@@ -52,7 +52,7 @@
                 <div class="col-md-6">
                      <div class="form1">
                         <h4>INCLUYE ALGUNOS DETALLES</h4>
-                        <form action="/products/create?_method=POST" method="POST">
+                        <form action="/store_method=PUT" method="POST">
                             <div class="titulo-producto">
                                 <label for="name" class="form-label">Nombre del producto:</label>
                                 <input type="text" id="name" name="name" placeholder="Ej: Modulo fuente alimentacion" class="form-input">
@@ -70,7 +70,7 @@
                                     <option value="accesorios">Accesorios</option>
                                     <option value="servos y motores">Servos y Motores</option>
                                     <option value="led">Led</option>
-                                    <option value="compontes">Servos y Motores</option>
+                                    <option value="componentes">Componentes</option>
                                 </select> 
                             </div>
     
