--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -187,73 +187,61 @@
 
 	<!-- CATEGORIAS -->
 
+<section class="container">
+	<div class="row">
+		<div class="col-12">
+			<h2 class="categoriaTitulo">Categørias</h2>
+		  </div>
+		</div>
+</section>
 
-	<!-- <section class="container">
-		<div class="row productos">
-		  <div class="col-12">
-			<h2>Categorias</h2>
-		  </div>
-		  <div class="col-12 col-md-6 col-lg-3 caja1">
-			<div>
-				
-				<a  href="#" target="_blank"><img src="images/ARDUINO_01.jpg" alt=""> <H3>ARDUINO</H3> </a>
-			</div>
-		  </div>
 
-		  <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a  href="#" target="_blank">  <img src="images/ARDUINO_02.jpg" alt=""> </a>
-			</div>
-		  </div>
 
-		  <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a  href="#" target="_blank">  <img src="/images/ARDUINO_03.jpg" alt=""> </a> 
-			</div>
-		  </div>
 
-		  <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a href="#" target="_blank"> <img src="/images/ARDUINO_04.jpg" alt="">  </a>
-			</div>
-		  </div>
+	 <section class="container">
+		<div class="row categorias1">
+
+			<div class="col-12 col-md-6 col-lg-3 back1 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">ARDUINO</h3></a>
+			  </div>
+
+			  <div class="col-12 col-md-6 col-lg-3 back2 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">MODULOS</h3></a>
+			  </div>
+
+			  <div class="col-12 col-md-6 col-lg-3 back3 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">SENSORES</h3></a>
+			  </div>
+
+			  <div class="col-12 col-md-6 col-lg-3 back4 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">ACCESORIOS</h3></a>
+			  </div>
+		
 		</div>
 	  </section>
 
 
-	  <section class="container">
-		<div class="row productos" id="categorias">
-		  <div class="col-12">
-		  </div>
-		  <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a href="#" target="_blank"> <img src="/images/ARDUINO_05.jpg" alt=""></a>
-			  
+	  <section class="container cate">
+		<div class="row" id="categorias">
+		  
+			<div class="col-12 col-md-6 col-lg-3 back5 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">SERVOS</h3></a>
+			  </div>
 	
-			</div>
-		  </div>
-		  <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a  href="#" target="_blank"><img src="images/ARDUINO_06.jpg" alt=""></a> 
-			</div>
-		  </div>
+		  
+			  <div class="col-12 col-md-6 col-lg-3 back6 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">MOTORES</h3></a>
+			  </div>
 
-		   <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a  href="#" target="_blank"><img src="/images/ARDUINO_07.jpg" alt=""> </a>  
-			</div>
-		  </div>
+			  <div class="col-12 col-md-6 col-lg-3 back7 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">LED</h3></a>
+			  </div>
 
-		 <div class="col-12 col-md-6 col-lg-3">
-			<div class="">
-				<a href="#" target="_blank"><img src="/images/ARDUINO_08.jpg" alt=""></a>
-			</div> 
-		  </div> 
+			  <div class="col-12 col-md-6 col-lg-3 back8 caja1">
+				<a href="#" target="_blank"> <h3 class="titleBack">COMPONENTES</h3></a>
+			  </div>
 		</div>
-	  </section> -->
-
-
-
+	  </section> 
 
 	  <%- include('partials/footer') %>
 
