funcionalidad detalles arreglada

--- a/Site/views/home.ejs
+++ b/Site/views/home.ejs
@@ -68,7 +68,7 @@
 			  <% visitados.forEach(producto => { %>
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="contenido">
-						<a href="products/detail/<%- producto.id %> ">	
+						<a href="/products/detail/<%- producto.id %> ">	
 							<div>
 								<img src="/images/productos/<%- producto.image %> " alt="Imagen del producto">
 								</div>
