--- a/Site/views/productAdd.ejs
+++ b/Site/views/productAdd.ejs
@@ -52,7 +52,7 @@
                 <div class="col-md-6">
                      <div class="form1">
                         <h4>INCLUYE ALGUNOS DETALLES</h4>
-                        <form action="/store_method=PUT" method="POST">
+                        <form action="products/store_method=PUT" method="POST" enctype="multipart/form-data">
                             <div class="titulo-producto">
                                 <label for="name" class="form-label">Nombre del producto:</label>
                                 <input type="text" id="name" name="name" placeholder="Ej: Modulo fuente alimentacion" class="form-input">
