--- a/Site/views/productDetails.ejs
+++ b/Site/views/productDetails.ejs
@@ -30,18 +30,18 @@
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img class="d-block w-100" src="images/productos/<%- productos.image  %> " data-color="lightblue" alt="First Image">
+					<img class="d-block w-100" src="/images/productos/<%- producto.image %> " data-color="lightblue" alt="First Image">
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img class="d-block w-100" src="images/productos/<%- productos.image  %> " data-color="firebrick" alt="Second Image">
+					<img class="d-block w-100" src="/images/productos/<%- producto.image %> " data-color="firebrick" alt="Second Image">
 					<div class="carousel-caption d-md-block">
 						
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img class="d-block w-100" src="images/productos/<%- productos.image  %> " data-color="violet" alt="Third Image">
+					<img class="d-block w-100" src="/images/productos/<%- producto.image %> " data-color="violet" alt="Third Image">
 					<div class="carousel-caption d-md-block">
 					</div>
 				  </div>
@@ -70,7 +70,7 @@
                 <h3>Descripcion</h3>
                 </div>
                 <div class="informacion col-12">
-                <p><%- productos.description %> .</p>
+                <p><%- producto.description %> .</p>
                 </div>
             <div class="precios col-6">
                 <h2>$<%- producto.price - (producto.price / 100 * producto.discount) %></h2>
