--- a/Site/views/productEdit.ejs
+++ b/Site/views/productEdit.ejs
@@ -5,7 +5,7 @@
     <%- include('./partials/header')  %> 
 
     <div class="container">
-        <form action="/update/<%= producto.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <form action="products/update/<%= producto.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
             <h3>Agregar</h3>
             <hr>
             <div class="row">
