--- a/Site/public/stylesheets/home.css
+++ b/Site/public/stylesheets/home.css
@@ -1,8 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,700;1,400&display=swap');
+
 .carrousel {
   display: none;
 }
+
 .carrousel-item img{
     height: 200px;
 }
@@ -45,7 +47,7 @@ h5 {
   .productos .contenido {
     background-color: #fff;
     border-radius: 5px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
     transition: transform .5s ease, box-shadow .5s ease;
     height: 500px;
@@ -59,8 +61,9 @@ h5 {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   }
   .productos img {
-    width: 95%;
-    margin-top: 56px;
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 35px;
   }
   .productos .datos {
     display: flex;
@@ -69,6 +72,7 @@ h5 {
     border-top: 1px solid  #30475e;
     padding: 20px;
     position: relative;
+    color: gray; 
   }
   .productos .datos h3 {
     margin-bottom: 0;
@@ -118,6 +122,7 @@ h5 {
   color: black;
   width: 270px;
   margin: 0 auto;
+  border-radius: 20px;
 }
 
 
@@ -142,6 +147,7 @@ h5 {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 
@@ -150,6 +156,7 @@ h3.titleBack {
   line-height: 270px;
   text-align: center;
   color: white;
+  
 }
 
 .back2 {
@@ -158,6 +165,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 .back3 {
@@ -166,6 +174,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 .back4 {
   background-image: url(../images/ARDUINO_04.png);
@@ -173,6 +182,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 .back5 {
@@ -181,6 +191,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 .back6 {
@@ -189,6 +200,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 .back7 {
@@ -197,6 +209,7 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
 }
 
 .back8 {
@@ -205,8 +218,17 @@ h3.titleBack {
   background-size: cover;
   height: 270px;
   color: white;
+  margin-bottom: 4px;
+  
 }
 
 
 
+/* RESPONSIVE */
 
+
+@media(max-width: 460px){
+  .carousel {
+    display: none;
+}
+}
