--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -34,7 +34,7 @@
                       </label>
                     </div>
                   </form>
-                  <a href="/registro" style="color: #30475e;">
+                  <a href="/users/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
                   
                 </div>
