--- a/Site/views/partials/header.ejs
+++ b/Site/views/partials/header.ejs
@@ -8,8 +8,8 @@
       </div>
 
       <div class=" form-nav col-12 col-md-8 col-lg-5">
-        <form action="" id="form">
-          <input type="text" placeholder="Buscar productos, marcas y más" />
+        <form action="/products/search" id="form" method="GET">
+          <input type="search" placeholder="Buscar productos, marcas y más" name="search" />
           <button type="submit">
             <i class="fas fa-search"></i>
           </button>
