--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -49,7 +49,7 @@
                     
                     <input type="submit" class="submit" value="INICIAR">
                   </form>
-                  <a href="#" style="color: #30475e;">
+                  <a href="/users/iniciar" style="color: #30475e;">
                       <h1 class="noLogin">¿Estás registrado? <a href="/iniciar"></a>Inicia sesión</h1>
                   
                 </div>
