--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -22,10 +22,10 @@
               <div class="login-container">
                 <div class="register">
                   <h2 class="text1">¡Hola! Para continuar iniciar sesión</h2>
-                  <form action="" method="POST">
+                  <form action="/users/iniciar" method="POST">
                     <!--<input type="text" placeholder="Nombre" class="nombre"> -->
-                    <input type="text" placeholder="Correo" class="correo">
-                    <input type="password" placeholder="Contraseña" class="pass">
+                    <input type="text" placeholder="Correo" class="correo" name="email">
+                    <input type="password" placeholder="Contraseña" class="pass" name="pass">
                     <input type="submit" class="submit" value="INICIAR">
                     <div class="form-check d-flex justify-content-center mt-4">
                       <input class="form-check-input" type="checkbox" id="flexCheckDefault" name="recordar">
@@ -33,6 +33,12 @@
                         Recordarme
                       </label>
                     </div>
+                    <% if (typeof error != 'undefined') { %>
+                      <div class="alert error">
+                      <span><%= error %> </span>
+                    </div>
+                    <% } %>
+                   
                   </form>
                   <a href="/users/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
