--- a/Site/views/productEdit.ejs
+++ b/Site/views/productEdit.ejs
@@ -43,7 +43,7 @@
                 <div class="form-floating mb-3">
                   <div class="">
                     
-                    <input class="form-control" type="file" id="formFile" name="image">
+                    <input multiple class="form-control" type="file" id="formFile" name="image">
                     <label for="" class="text-right"><%= producto.image %></label>
                   </div>
                 </div>
