--- a/Site/views/products.ejs
+++ b/Site/views/products.ejs
@@ -61,6 +61,7 @@
               </div>
               <% }) %>
           </section>
+          <a href="/users/logout">Cerrar Sesión</a>
     </div>
     
     <%- include('partials/footer')%>   
