--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -34,7 +34,7 @@
                 </div>
 
                 <div>
-                    <input type="text" placeholder="Email" class="email" name="email">
+                    <input type="email" placeholder="Email" class="email" name="email">
                     <span class="text-danger"><%= (typeof errores != 'undefined' && errores.username)?errores.username.msg : "" %> </span>
                 </div>
 
@@ -53,11 +53,6 @@
                       <h1 class="noLogin">¿Estás registrado? <a href="/iniciar"></a>Inicia sesión</h1>
                   
                 </div>
-                <% if (typeof error != 'undefined') { %>
-                  <div class="alert error">
-                  <span><%= error %> </span>
-                </div>
-                <% } %>
                <!-- <div class="login">
                   <h2 class="iniciar">Iniciar cuenta con</h2>
                   <div class="login-items">
