lista de productos en proceso (ejs/css)

--- a/Site/views/registro.ejs
+++ b/Site/views/registro.ejs
@@ -50,7 +50,7 @@
                     <input type="submit" class="submit" value="INICIAR">
                   </form>
                   <a href="#" style="color: #30475e;">
-                      <h1 class="noLogin">¿Estás registrado? <a href="/iniciar"></a>Inicia sesión</h1>
+                      <h1 class="noLogin">¿Estás registrado? <a href="/users/iniciar" class="noLogin1">Inicia sesión </a></h1>
                   
                 </div>
                <!-- <div class="login">
