--- a/Site/views/products.ejs
+++ b/Site/views/products.ejs
@@ -8,30 +8,30 @@
     <%- include('partials/header')%>   
 
     <div class="container">
-        <h1>Listado de Productos</h1>
+        <h1 class="titulo">Listado de Productøs</h1>
 
         <section class="row ">
             <% productos.forEach(producto=> { %>
               <article class="col-12 col-md-4 col-lg-3 ">
                 <ul class="list-group list-group-flush my-3 ">
                   <li class="list-group-item">
-                    <h4>
+                    <h4 class="nameProducto">
                       <%= producto.name %>
                     </h4>
                   </li>
-                  <li class="list-group-item">
-                    <h5>
-                      <%= producto.category %>
-                    </h5>
-                  </li>
+      
                   <li class="list-group-item">
                     <h6>
-                      <%= producto.price %>
+                     Precio final $<%= producto.price %>
                     </h6>
                   </li>
-                  <li class="list-group-item"><a href="" data-bs-toggle="modal" data-bs-target="#exampleModal-<%= producto.id %> ">
-                      <%= producto.image %>
-                    </a></li>
+                  <li class="list-group-item">
+                    <p>Categoria</p>
+                    <h5 class="button type4"> <%= producto.category %></h5>
+                  </li>
+
+                  <li class="list-group-item"><a href="" data-bs-toggle="modal" data-bs-target="#exampleModal -<%= producto.id %> "><%= producto.image%></a></li> 
+                    
                   <li class="list-group-item">
                     <div class="m-2 d-flex justify-content-around">
                       <form action="products/edit/<%= producto.id %>">
