--- a/Site/views/iniciar.ejs
+++ b/Site/views/iniciar.ejs
@@ -39,7 +39,7 @@
                   </form>
                   <a href="/users/registro" style="color: #30475e;">
                       <h1 class="noLogin">¿Aún no estás registrado?</h1>
-                      <span class="text-danger"><%= (typeof errores != 'undefined' && errores.error();)?errores.pass.msg : "" %> </span>
+                      <span class="text-danger"><%= (typeof errores != 'undefined' && errores.error())?errores.pass.msg : "" %> </span>
 
                 </div>
                <!-- <div class="login">
